# fast-api-test

./: .env.sample  .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: __init__.py  default_settings.py
app/api/: __init__.py  main.py  pp.py
app/api/v1/: __init__.py  house.py
app/api/v1/chicken/: __init__.py  hen.py
app/core/: config.py  deps.py  security.py
app/core/settings/: app.py
app/models/: __init__.py  articles.py  fields.py  house.py
scripts/: generate-client.py  run-dev
